@@ -1,5 +1,12 @@
 2008-09-24  Stefan Kost  <ensonic@users.sf.net>
 
+	* dllwrapper1/wine/Makefile.am:
+	* src/BuzzMachineLoader/Makefile.am:
+	* src/Makefile.am:
+	  Don't confuse CPPFLAGS with CFLAGS.
+
+2008-09-24  Stefan Kost  <ensonic@users.sf.net>
+
 	* dllwrapper1/wine/win32.c:
 	  Use buzz.exe as a app name.
 
